@@ -50,6 +50,12 @@ You can decide which attacks you want to run and which parts of your application
 |TRUE or FALSE
 |FALSE
 
+|chaos.monkey.assaults.killApplication.cron.expression
+|Cron expression like `*/1 * * * * ?` can be set to enable chaos monkey AppKiller assault on a schedule
+|Any valid cron expression (or OFF)
+|OFF
+|===
+
 |chaos.monkey.watcher.controller
 |Controller watcher active
 |TRUE or FALSE
@@ -100,6 +106,11 @@ You can decide which attacks you want to run and which parts of your application
 |min=0.01, max=0.95
 |0.25
 
+|chaos.monkey.assaults.memory.cron.expression
+|Cron expression like `*/1 * * * * ?` can be set to enable chaos monkey memory assault on a schedule
+|Any valid cron expression (or OFF)
+|OFF
+
 |chaos.monkey.assaults.cpuActive
 |CPU assault active
 |TRUE or FALSE
@@ -114,6 +125,11 @@ You can decide which attacks you want to run and which parts of your application
 |Final fraction of used cpu by assault. `0.95` equals 95 %.
 |min=0.1, max=1.0
 |0.9
+
+|chaos.monkey.assaults.cpu.cron.expression
+|Cron expression like `*/1 * * * * ?` can be set to enable chaos monkey cpu assault on a schedule
+|Any valid cron expression (or OFF)
+|OFF
 
 |chaos.monkey.assaults.runtime.scope.assault.cron.expression
 |Cron expression like `*/1 * * * * ?` can be set to enable chaos monkey runtime assaults on a schedule
