@@ -209,14 +209,17 @@ Watcher config has changed
     "arguments": null
   },
   "killApplicationActive": false,
+  "killApplicationCronExpression": "OFF",
   "memoryActive": false,
   "memoryMillisecondsHoldFilledMemory": 90000,
   "memoryMillisecondsWaitNextIncrease": 1000,
   "memoryFillIncrementFraction": 0.15,
   "memoryFillTargetFraction": 0.25,
+  "memoryCronExpression": "OFF",
   "cpuActive": true,
   "cpuMillisecondsHoldLoad": 90000,
   "cpuLoadTargetFraction": 0.9,
+  "cpuCronExpression": "OFF",
   "runtimeAssaultCronExpression": "OFF"
 }
 ----
