@@ -1,3 +1,7 @@
 package de.codecentric.spring.boot.chaos.monkey.assaults;
 
-public interface ChaosMonkeyRuntimeAssault extends ChaosMonkeyAssault {}
+import de.codecentric.spring.boot.chaos.monkey.configuration.AssaultProperties;
+
+public interface ChaosMonkeyRuntimeAssault extends ChaosMonkeyAssault {
+  String getCronExpression(AssaultProperties assaultProperties);
+}
