@@ -49,6 +49,8 @@ public class AssaultPropertiesUpdate {
 
   @Nullable private Boolean killApplicationActive;
 
+  @Nullable private String killApplicationCronExpression;
+
   @Nullable private volatile Boolean memoryActive;
 
   @Nullable
@@ -71,6 +73,8 @@ public class AssaultPropertiesUpdate {
   @DecimalMin("0.05")
   private Double memoryFillTargetFraction;
 
+  @Nullable private String memoryCronExpression;
+
   @Nullable private Boolean cpuActive;
 
   @Nullable
@@ -83,7 +87,13 @@ public class AssaultPropertiesUpdate {
   @DecimalMin("0.1")
   private Double cpuLoadTargetFraction;
 
-  @Nullable private String runtimeAssaultCronExpression;
+  @Nullable private String cpuCronExpression;
+
+  /**
+   * @deprecated please use {@link #killApplicationCronExpression}, {@link #memoryCronExpression} or
+   *     {@link #cpuCronExpression} instead
+   */
+  @Deprecated @Nullable private String runtimeAssaultCronExpression;
 
   @Nullable private List<String> watchedCustomServices;
 
@@ -103,16 +113,19 @@ public class AssaultPropertiesUpdate {
     applyTo(exception, t::setException);
 
     applyTo(killApplicationActive, t::setKillApplicationActive);
+    applyTo(killApplicationCronExpression, t::setKillApplicationCronExpression);
 
     applyTo(memoryActive, t::setMemoryActive);
     applyTo(memoryMillisecondsHoldFilledMemory, t::setMemoryMillisecondsHoldFilledMemory);
     applyTo(memoryMillisecondsWaitNextIncrease, t::setMemoryMillisecondsWaitNextIncrease);
     applyTo(memoryFillIncrementFraction, t::setMemoryFillIncrementFraction);
     applyTo(memoryFillTargetFraction, t::setMemoryFillTargetFraction);
+    applyTo(memoryCronExpression, t::setMemoryCronExpression);
 
     applyTo(cpuActive, t::setCpuActive);
     applyTo(cpuMillisecondsHoldLoad, t::setCpuMillisecondsHoldLoad);
     applyTo(cpuLoadTargetFraction, t::setCpuLoadTargetFraction);
+    applyTo(cpuCronExpression, t::setCpuCronExpression);
 
     applyTo(runtimeAssaultCronExpression, t::setRuntimeAssaultCronExpression);
     applyTo(watchedCustomServices, t::setWatchedCustomServices);
