@@ -2,13 +2,14 @@ package de.codecentric.spring.boot.chaos.monkey.component;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.argThat;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
+import de.codecentric.spring.boot.chaos.monkey.assaults.CpuAssault;
+import de.codecentric.spring.boot.chaos.monkey.assaults.KillAppAssault;
+import de.codecentric.spring.boot.chaos.monkey.assaults.MemoryAssault;
 import de.codecentric.spring.boot.chaos.monkey.configuration.AssaultProperties;
+import java.util.Arrays;
+import java.util.Collections;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentMatcher;
@@ -25,14 +26,23 @@ class ChaosMonkeySchedulerTest {
 
   @Mock private AssaultProperties config;
 
-  @Mock private ChaosMonkeyRuntimeScope scope;
+  @Mock private KillAppAssault killAppAssault;
+
+  @Mock private MemoryAssault memoryAssault;
+
+  @Mock private CpuAssault cpuAssault;
 
   @Test
   void shouldRespectTheOffSetting() {
-    when(config.getRuntimeAssaultCronExpression()).thenReturn("OFF");
+    when(memoryAssault.getCronExpression(any())).thenReturn("OFF");
+    when(killAppAssault.getCronExpression(any())).thenReturn("OFF");
+    when(cpuAssault.getCronExpression(any())).thenReturn("OFF");
 
-    new ChaosMonkeyScheduler(registrar, config, scope);
-    verify(scope, never()).callChaosMonkey();
+    new ChaosMonkeyScheduler(
+        registrar, config, Arrays.asList(memoryAssault, killAppAssault, cpuAssault));
+    verify(killAppAssault, never()).attack();
+    verify(memoryAssault, never()).attack();
+    verify(cpuAssault, never()).attack();
     verify(registrar, never()).scheduleCronTask(any());
   }
 
@@ -40,33 +50,37 @@ class ChaosMonkeySchedulerTest {
   void shouldScheduleATask() {
     String schedule = "*/1 * * * * ?";
     ScheduledTask scheduledTask = mock(ScheduledTask.class);
-    when(config.getRuntimeAssaultCronExpression()).thenReturn(schedule);
+    when(memoryAssault.getCronExpression(any())).thenReturn(schedule);
     when(registrar.scheduleCronTask(any())).thenReturn(scheduledTask);
 
-    new ChaosMonkeyScheduler(registrar, config, scope);
+    new ChaosMonkeyScheduler(registrar, config, Collections.singletonList(memoryAssault));
 
     verify(registrar).scheduleCronTask(argThat(hasScheduleLike(schedule)));
   }
 
   @Test
-  void shouldScheduleANewTaskAfterAnUpdate() {
+  void shouldNotScheduleNewTasksAfterUnrelatedUpdate() {
     String schedule = "*/1 * * * * ?";
-    ScheduledTask oldTask = mock(ScheduledTask.class);
-    ScheduledTask newTask = mock(ScheduledTask.class);
-    when(config.getRuntimeAssaultCronExpression()).thenReturn(schedule);
-    when(registrar.scheduleCronTask(any())).thenReturn(oldTask, newTask);
+    ScheduledTask oldTask = mockScheduledTask("memory", schedule);
+    when(memoryAssault.getCronExpression(any())).thenReturn(schedule);
+    when(registrar.scheduleCronTask(any())).thenReturn(oldTask);
 
-    ChaosMonkeyScheduler cms = new ChaosMonkeyScheduler(registrar, config, scope);
+    ChaosMonkeyScheduler cms =
+        new ChaosMonkeyScheduler(registrar, config, Collections.singletonList(memoryAssault));
+    verify(registrar, times(1)).scheduleCronTask(argThat(hasScheduleLike(schedule)));
+
+    reset(registrar);
+
     cms.reloadConfig();
 
-    verify(registrar, times(2)).scheduleCronTask(argThat(hasScheduleLike(schedule)));
-    verify(oldTask).cancel();
+    verify(registrar, never()).scheduleCronTask(argThat(hasScheduleLike(schedule)));
   }
 
   @Test
   void shouldTriggerRuntimeScopeRunAttack() {
     String schedule = "*/1 * * * * ?";
-    when(config.getRuntimeAssaultCronExpression()).thenReturn(schedule);
+    when(memoryAssault.isActive()).thenReturn(true);
+    when(memoryAssault.getCronExpression(any())).thenReturn(schedule);
     when(registrar.scheduleCronTask(any()))
         .thenAnswer(
             iom -> {
@@ -74,11 +88,46 @@ class ChaosMonkeySchedulerTest {
               return null;
             });
 
-    new ChaosMonkeyScheduler(registrar, config, scope);
-    verify(scope).callChaosMonkey();
+    new ChaosMonkeyScheduler(registrar, config, Collections.singletonList(memoryAssault));
+    verify(memoryAssault).attack();
+  }
+
+  @Test
+  void shouldRescheduleOnlyChangedTasks() {
+    String memorySchedule = "*/1 * * * * ?";
+    String killAppSchedule = "*/2 * * * * ?";
+    ScheduledTask memoryTask = mockScheduledTask("memory", memorySchedule);
+    ScheduledTask oldTask = mockScheduledTask("killApp", killAppSchedule);
+    ScheduledTask newTask = mock(ScheduledTask.class);
+    when(memoryAssault.getCronExpression(any())).thenReturn(memorySchedule);
+    when(killAppAssault.getCronExpression(any())).thenReturn(killAppSchedule);
+    when(registrar.scheduleCronTask(argThat(hasScheduleLike(memorySchedule))))
+        .thenReturn(memoryTask);
+    when(registrar.scheduleCronTask(argThat(hasScheduleLike(killAppSchedule))))
+        .thenReturn(oldTask, newTask);
+
+    ChaosMonkeyScheduler cms =
+        new ChaosMonkeyScheduler(registrar, config, Arrays.asList(memoryAssault, killAppAssault));
+    verify(registrar).scheduleCronTask(argThat(hasScheduleLike(memorySchedule)));
+    verify(registrar).scheduleCronTask(argThat(hasScheduleLike(killAppSchedule)));
+
+    reset(registrar);
+    String killAppSchedule2 = "*/3 * * * * ?";
+    when(killAppAssault.getCronExpression(any())).thenReturn(killAppSchedule2);
+
+    cms.reloadConfig();
+    verify(registrar).scheduleCronTask(argThat(hasScheduleLike(killAppSchedule2)));
+    verify(memoryTask, never()).cancel();
+    verify(oldTask).cancel();
   }
 
   private ArgumentMatcher<CronTask> hasScheduleLike(String schedule) {
-    return cronTask -> cronTask.getExpression().equals(schedule);
+    return cronTask -> cronTask != null && cronTask.getExpression().equals(schedule);
+  }
+
+  private static ScheduledTask mockScheduledTask(String name, String schedule) {
+    ScheduledTask scheduledTask = mock(ScheduledTask.class, name);
+    when(scheduledTask.getTask()).thenReturn(new CronTask(() -> {}, schedule));
+    return scheduledTask;
   }
 }
